set max-width for images in a figure to 100% avoids scrollbars with big images

--- a/src/mdproc.less
+++ b/src/mdproc.less
@@ -106,6 +106,10 @@ code {
 	padding: 0.075em 0.3em;
 }
 
+figure img {
+	max-width: 100%;
+}
+
 #preface {
 	.item {
 	   margin: 0.5em 0;
